Move instructions into startOfRound modal

--- a/game.html
+++ b/game.html
@@ -17,12 +17,11 @@
 			<div class="box">
 				<h2>Equipe</h2><br>
 				<span id="currentTurnTeam"></span>/<span id="teamsCount"></span><br><br>
-				<a href="./index.html" class="restart">Recommencer</a>
 			</div>
 
 			<div class="box round">
 				<h2>Manche <span id="currentRound"></span>/<span id="roundsCount"></span></h2><br>
-				<span id="roundRule"></span>
+				<a href="./index.html" class="restart">Recommencer la partie</a>
 			</div>
 
 			<div class="box counter">
