--- a/game.html
+++ b/game.html
@@ -14,32 +14,36 @@
 		</span>
 
 		<div id="app" class="app" style="display: none";>
-			<a class="c-box c-box--logo" href="./index.html">
+			<a class="c-logo c-box c-box--logo" href="./index.html">
 				Time is up
 			</a>
 
-			<div class="c-box" id="round">
+			<div class="c-box c-round">
 				<h2>Manche</h2>
 				<span id="currentRound"></span>/<span id="roundsCount"></span></h2>
 			</div>
 
-			<div class="c-box">
+			<div class="c-box c-team">
 				<h2>Equipe</h2>
 				<span id="currentTurnTeam"></span>/<span id="teamsCount"></span><br><br>
 			</div>
 
-			<div class="c-box" id="counters">
-				<h2 class="sr-only">Compteurs</h2>
-				<h3>Trouvés</h3> <span id="guessedCount"></span>/<span id="currentTurnWordsToGuessedCount"></span><br>
-				<h3>Passés</h3> <span id="passedCount"></span>
+			<div class="c-box c-skipped">
+				<h2>Passés</h2>
+				<span id="passedCount"></span>
 			</div>
 
 
-			<button class="c-button c-button--stop" id="stop">
+			<div class="c-box c-guessed">
+				<h2>Trouvés</h2>
+				<span id="guessedCount"></span>/<span id="currentTurnWordsToGuessedCount"></span>
+			</div>
+
+			<button class="c-stop c-button c-button--stop" id="stop">
 				<img src="./images/icons/stop.svg" alt="Stop">
 			</button>
 
-			<button class="c-button c-button--skip" id="pass">
+			<button class="c-skip c-button c-button--skip" id="skip">
 				<img src="./images/icons/thumbs-down.svg" alt="Passe">
 			</button>
 
@@ -49,7 +53,7 @@
 				</div>
 			</div>
 
-			<button class="c-button c-button--guessed" id="guessed">
+			<button class="c-succeed c-button c-button--succeed" id="succeed">
 				<img src="./images/icons/thumbs-up.svg" alt="Trouvé">
 			</button>
 		</div>
