Add logo + favicon

--- a/game.html
+++ b/game.html
@@ -4,7 +4,16 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Time's up</title>
+		<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+		<link rel="manifest" href="/images/favicons/site.webmanifest">
+		<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="/images/favicons/favicon.ico">
+		<meta name="msapplication-TileColor" content="#ffc40d">
+		<meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
+		<meta name="theme-color" content="#ffd033">
+		<title>Times up</title>
 		<link rel="stylesheet" href="./styles.css">
 	</head>
 	<body>
@@ -15,7 +24,7 @@
 
 		<div id="app" class="app" style="display: none";>
 			<a class="c-logo c-box c-box--logo" href="./index.html">
-				Time is up
+				<img src="./images/logo.svg" alt="Time is up">
 			</a>
 
 			<div class="c-box c-round">
