--- a/game.html
+++ b/game.html
@@ -56,6 +56,9 @@
 				<img src="./images/icons/thumbs-down.svg" alt="Passe">
 			</button>
 
+			<div class="c-box c-timer" role="timer" id="timer">
+			</div>
+
 			<div class="c-box c-word">
 				<h2 class="sr-only">Mot en cours</h2>
 				<div class="c-word__wrapper" id="word">
@@ -66,6 +69,7 @@
 				<img src="./images/icons/thumbs-up.svg" alt="Trouvé">
 			</button>
 		</div>
+		<audio id="beep" src="beep.mp3"></audio>
 
 		<script>
 			(function(document, window){
