--- a/game.html
+++ b/game.html
@@ -71,10 +71,10 @@
 				<img src="./images/icons/thumbs-up.svg" alt="Trouvé">
 			</button>
 		</div>
-		<audio id="time-is-up-sound" src="audio-clips/time-is-up.mp3"></audio>
-		<audio id="skipped-sound" src="audio-clips/skipped.mp3"></audio>
-		<audio id="guessed-sound" src="audio-clips/guessed.mp3"></audio>
-		<audio id="stop-sound" src="audio-clips/stop.mp3"></audio>
+		<audio id="time-is-up-sound" preload="auto" src="audio-clips/time-is-up.mp3"></audio>
+		<audio id="skipped-sound" preload="auto" src="audio-clips/skipped.mp3"></audio>
+		<audio id="guessed-sound" preload="auto" src="audio-clips/guessed.mp3"></audio>
+		<audio id="stop-sound" preload="auto" src="audio-clips/stop.mp3"></audio>
 
 		<script>
 			(function(document, window){
