Add final ticks

--- a/game.html
+++ b/game.html
@@ -75,6 +75,7 @@
 		<audio id="skipped-sound" preload="auto" src="audio-clips/skipped.mp3"></audio>
 		<audio id="guessed-sound" preload="auto" src="audio-clips/guessed.mp3"></audio>
 		<audio id="stop-sound" preload="auto" src="audio-clips/stop.mp3"></audio>
+		<audio id="tick-sound" preload="auto" src="audio-clips/tick.mp3"></audio>
 
 		<script>
 			(function(document, window){
