--- a/game.html
+++ b/game.html
@@ -73,9 +73,9 @@
 		</div>
 		<audio id="time-is-up-sound" preload="auto" src="audio-clips/time-is-up.mp3"></audio>
 		<audio id="skipped-sound" preload="auto" src="audio-clips/skipped.mp3"></audio>
-		<audio id="guessed-sound" preload="auto" src="audio-clips/guessed.mp3"></audio>
+		<audio id="guessed-sound" preload="auto" src="audio-clips/tick.mp3"></audio>
 		<audio id="stop-sound" preload="auto" src="audio-clips/stop.mp3"></audio>
-		<audio id="tick-sound" preload="auto" src="audio-clips/tick.mp3"></audio>
+		<audio id="tick-sound" preload="auto" src="audio-clips/guessed.mp3"></audio>
 
 		<script>
 			(function(document, window){
