--- a/game.html
+++ b/game.html
@@ -37,23 +37,22 @@
 				<span id="currentTurnTeam"></span>/<span id="teamsCount"></span><br><br>
 			</div>
 
-			<div class="c-box c-skipped">
-				<h2>Passés</h2>
-				<span id="passedCount"></span>
+			<div class="c-box c-failed">
+				<h2>Echoués</h2>
+				<span id="failedCount"></span>
 			</div>
 
-
-			<div class="c-box c-guessed">
+			<div class="c-box c-succeed">
 				<h2>Trouvés</h2>
-				<span id="guessedCount"></span>/<span id="currentTurnWordsToGuessedCount"></span>
+				<span id="succeedCount"></span>/<span id="currentTurnWordsToSucceedCount"></span>
 			</div>
 
 			<button class="c-stop c-button c-button--stop" id="stop">
 				<img src="./images/icons/stop.svg" alt="Stop">
 			</button>
 
-			<button class="c-skip c-button c-button--skip" id="skip">
-				<img src="./images/icons/thumbs-down.svg" alt="Passe">
+			<button class="c-failed-button c-button c-button--failed" id="failed">
+				<img src="./images/icons/thumbs-down.svg" alt="Echoué">
 			</button>
 
 			<div class="c-box c-timer" role="timer" id="timer" aria-atomic="true">
@@ -67,13 +66,13 @@
 				</div>
 			</div>
 
-			<button class="c-succeed c-button c-button--succeed" id="succeed">
+			<button class="c-succeed-button c-button c-button--succeed" id="succeed">
 				<img src="./images/icons/thumbs-up.svg" alt="Trouvé">
 			</button>
 		</div>
 		<audio id="time-is-up-sound" preload="auto" src="audio-clips/time-is-up.mp3"></audio>
-		<audio id="skipped-sound" preload="auto" src="audio-clips/skipped.mp3"></audio>
-		<audio id="guessed-sound" preload="auto" src="audio-clips/guessed.mp3"></audio>
+		<audio id="failed-sound" preload="auto" src="audio-clips/failed.mp3"></audio>
+		<audio id="succeed-sound" preload="auto" src="audio-clips/succeed.mp3"></audio>
 		<audio id="stop-sound" preload="auto" src="audio-clips/stop.mp3"></audio>
 		<audio id="tick-sound" preload="auto" src="audio-clips/tick.mp3"></audio>
 
