Rename a bunch for vars and ids

--- a/game.html
+++ b/game.html
@@ -29,22 +29,22 @@
 
 			<div class="c-box c-round">
 				<h2>Manche</h2>
-				<span id="currentRound"></span>/<span id="roundsCount"></span></h2>
+				<span id="currentRound"></span>/<span id="nbOfRounds"></span></h2>
 			</div>
 
 			<div class="c-box c-team">
 				<h2>Equipe</h2>
-				<span id="currentTurnTeam"></span>/<span id="teamsCount"></span><br><br>
+				<span id="teamPlaying"></span>/<span id="nbOfTeams"></span><br><br>
 			</div>
 
 			<div class="c-box c-failed">
 				<h2>Echoués</h2>
-				<span id="failedCount"></span>
+				<span id="nbOfFailed"></span>
 			</div>
 
 			<div class="c-box c-succeed">
 				<h2>Trouvés</h2>
-				<span id="succeedCount"></span>/<span id="currentTurnWordsToSucceedCount"></span>
+				<span id="nbOfSucceed"></span>/<span id="nbOfWordsLeftToSucceed"></span>
 			</div>
 
 			<button class="c-stop c-button c-button--stop" id="stop">
