--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
 				<fieldset>
 					<legend>Nombre d'équipes</legend>
 					<label>
-						<input id="teams-count" name="teams-count" type="radio"value="2">
+						<input id="nbOfTeams" name="nbOfTeams" type="radio"value="2">
 						<span>2</span>
 					</label>
 					<label>
-						<input id="teams-count" name="teams-count" type="radio"value="3">
+						<input id="nbOfTeams" name="nbOfTeams" type="radio"value="3">
 						<span>3</span>
 					</label>
 					<label>
-						<input id="teams-count" name="teams-count" type="radio"value="4">
+						<input id="nbOfTeams" name="nbOfTeams" type="radio"value="4">
 						<span>4</span>
 					</label>
 				</fieldset>
 			</div>
 			<div class="c-settings__words">
 				<fieldset>
-					<legend>Nombre de mots</legend>
+					<legend>Nombre de mots à deviner</legend>
 					<label>
-						<input id="words-count" name="words-count" type="radio"value="10">
+						<input id="nbOfWordsToGuess" name="nbOfWordsToGuess" type="radio"value="10">
 						<span>10</span>
 					</label>
 					<label>
-						<input id="words-count" name="words-count" type="radio"value="20">
+						<input id="nbOfWordsToGuess" name="nbOfWordsToGuess" type="radio"value="20">
 						<span>20</span>
 					</label>
 				</fieldset>
@@ -54,7 +54,7 @@
 				<fieldset>
 					<legend>Version</legend>
 					<label>
-						<input id="version" name="version" type="radio"value="kids-with-images">
+						<input id="gameVersion" name="gameVersion" type="radio" value="kids-with-images">
 						<span>Enfants avec images</span>
 					</label>
 				</fieldset>
