--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 				<fieldset>
 					<legend>Nombre d'équipes</legend>
 					<label>
-						<input id="nbOfTeams" name="nbOfTeams" type="radio"value="2">
+						<input id="numberOfTeams" name="numberOfTeams" type="radio"value="2">
 						<span>2</span>
 					</label>
 					<label>
-						<input id="nbOfTeams" name="nbOfTeams" type="radio"value="3">
+						<input id="numberOfTeams" name="numberOfTeams" type="radio"value="3">
 						<span>3</span>
 					</label>
 					<label>
-						<input id="nbOfTeams" name="nbOfTeams" type="radio"value="4">
+						<input id="numberOfTeams" name="numberOfTeams" type="radio"value="4">
 						<span>4</span>
 					</label>
 				</fieldset>
@@ -41,11 +41,11 @@
 				<fieldset>
 					<legend>Nombre de mots à deviner</legend>
 					<label>
-						<input id="nbOfWordsToGuess" name="nbOfWordsToGuess" type="radio"value="10">
+						<input id="numberOfWordsToGuess" name="numberOfWordsToGuess" type="radio"value="10">
 						<span>10</span>
 					</label>
 					<label>
-						<input id="nbOfWordsToGuess" name="nbOfWordsToGuess" type="radio"value="20">
+						<input id="numberOfWordsToGuess" name="numberOfWordsToGuess" type="radio"value="20">
 						<span>20</span>
 					</label>
 				</fieldset>
