Add new versions and care for showing word only

--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
 						<input id="gameVersion" name="gameVersion" type="radio" value="kids-with-images">
 						<span>Enfants avec images</span>
 					</label>
+					<label>
+						<input id="gameVersion" name="gameVersion" type="radio" value="personnages-et-personnalites">
+						<span>Personnages et Personnalités</span>
+					</label>
+					<label>
+						<input id="gameVersion" name="gameVersion" type="radio" value="metiers-sports-et-animaux">
+						<span>Métiers, Sports et Animaux</span>
+					</label>
+					<label>
+						<input id="gameVersion" name="gameVersion" type="radio" value="actions-et-expressions">
+						<span>Actions et Expressions</span>
+					</label>
 				</fieldset>
 			</div>
 			<button class="c-button c-settings__submit" type="submit">
