Improve game layout overall

--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="./styles.css">
 	</head>
 	<body>
-		<h1 class="sr-only">Partie en cours...</h1>
+		<h1 class="sr-only">Time is up - Partie en cours...</h1>
 		<span aria-live="assertive" id="live-region">
 			Chargement...
 		</span>
