Remove preloading audio

--- a/game.html
+++ b/game.html
@@ -81,12 +81,12 @@
 			<div class="c-dialog__mask" id="dialog-mask"></div>
 		</div>
 
-		<audio id="failed-audio" preload="auto" src="audio-clips/failed.mp3"></audio>
-		<audio id="succeed-audio" preload="auto" src="audio-clips/succeed.mp3"></audio>
-		<audio id="stop-turn-audio" preload="auto" src="audio-clips/stop-turn.mp3"></audio>
-		<audio id="countdown-tick-audio" preload="auto" src="audio-clips/countdown-tick.mp3"></audio>
-		<audio id="time-is-up-audio" preload="auto" src="audio-clips/time-is-up.mp3"></audio>
-		<audio id="end-of-game-audio" preload="auto" src="audio-clips/end-of-game.mp3"></audio>
+		<audio id="failed-audio" src="audio-clips/failed.mp3"></audio>
+		<audio id="succeed-audio" src="audio-clips/succeed.mp3"></audio>
+		<audio id="stop-turn-audio" src="audio-clips/stop-turn.mp3"></audio>
+		<audio id="countdown-tick-audio" src="audio-clips/countdown-tick.mp3"></audio>
+		<audio id="time-is-up-audio" src="audio-clips/time-is-up.mp3"></audio>
+		<audio id="end-of-game-audio" src="audio-clips/end-of-game.mp3"></audio>
 
 		<script>
 			(function(document, window){
